<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.che.degreestoradians.DegreeToNum">

    <Button
            android:text="@string/activityNumToDegree"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/activityNumToDegreeAt" app:layout_constraintRight_toLeftOf="@+id/button"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/fakeButtonActivityTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/activityNumToDegreeAt" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/calculate_degreeToNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/degreeToNumAt"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.535" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintVertical_bias="0.029999971"/>
    <TextView
            android:text="@string/labelGrad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textDegree"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/editDegreeAt" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/editDegreeAt" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/labelMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            android:textSize="12sp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/editMinAt" android:layout_marginTop="1dp"
            app:layout_constraintLeft_toRightOf="@+id/editMinAt" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/labelSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="12sp" android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/editSecAt"
            android:layout_marginLeft="8dp" app:layout_constraintTop_toTopOf="@+id/editSecAt"
            android:layout_marginTop="8dp"/>
    <EditText
            android:inputType="numberDecimal"
            android:layout_width="90dp"
            android:layout_height="49dp"
            android:text=""
            android:ems="20"
            android:id="@+id/editSecAt"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/degreeToNumAt"/>
    <EditText
            android:layout_width="90dp"
            android:layout_height="49dp"
            android:inputType="numberDecimal"
            android:text=""
            android:ems="20"
            android:id="@+id/editMinAt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/degreeToNumAt"/>
    <EditText
            android:layout_width="90dp"
            android:layout_height="49dp"
            android:inputType="numberDecimal"
            android:text=""
            android:ems="20"
            android:id="@+id/editDegreeAt"
            android:layout_marginStart="8dp" android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/degreeToNumAt"
    />
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textNum"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="30sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textDegree" app:layout_constraintVertical_bias="0.110000014"/>


</android.support.constraint.ConstraintLayout>
