<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.che.degreestoradians.MainActivity">

    <Button
            android:text="@string/degreeToNum"
            android:layout_height="wrap_content"

            android:id="@+id/degreeToNumAt"

            android:layout_width="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="7dp"
            app:layout_constraintLeft_toRightOf="@+id/fake"/>
    <Button
            android:text="@string/fake"
            android:layout_height="wrap_content"
            android:id="@+id/fake" android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintRight_toLeftOf="@+id/degreeToNumAt"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"

            android:hint="@string/enterTextNum"
            android:ems="10"
            android:id="@+id/enterTextNumAt"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="7dp" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/numToDegreeAt" app:layout_constraintVertical_bias="0.099"/>


    <Button
            android:text="@string/calculate_numToDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/numToDegreeAt"

            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="202dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/degreeToNumAt" app:layout_constraintVertical_bias="0.110000014"/>

    <TextView
            android:layout_width="321dp"
            android:layout_height="61dp"

            android:id="@+id/showTextDegreeAt"
            android:textSize="20dp" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/enterTextNumAt"/>
    <TextView
            android:layout_width="321dp"
            android:layout_height="61dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/enterTextNumSecAt"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/showTextDegreeAt" android:textSize="20sp"
    />


</android.support.constraint.ConstraintLayout>
